--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -284,12 +284,16 @@
             <span class="muted small" id="workspace-status"></span>
           </div>
           <div class="workspace-header-actions">
-            <button class="ghost sm hidden" id="workspace-generate-tickets" title="Generate tickets from spec">Generate
-              tickets</button>
+            <input type="file" id="workspace-upload-input" multiple hidden />
+            <button class="ghost sm" id="workspace-upload" title="Upload to current folder">Upload</button>
+            <button class="ghost sm" id="workspace-new-folder" title="Create folder">New Folder</button>
+            <button class="ghost sm" id="workspace-download-all" title="Download all as zip">Download All</button>
+            <button class="ghost sm hidden" id="workspace-generate-tickets" title="Generate tickets from spec">Generate tickets</button>
             <button class="ghost sm" id="workspace-reload">Reload</button>
             <button class="primary sm" id="workspace-save">Save</button>
           </div>
         </div>
+        <nav class="workspace-breadcrumbs" id="workspace-breadcrumbs"></nav>
         <div class="workspace-grid">
           <aside class="workspace-file-browser">
             <div class="workspace-file-mobile">
