Support folder picker in create modal and simplify tree bullets

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -874,6 +874,10 @@
           <input id="workspace-create-name" placeholder="my-note.md" type="text" />
           <span class="form-hint" id="workspace-create-hint">Created under current folder</span>
         </div>
+        <div class="form-group">
+          <label class="muted small" for="workspace-create-path">Location</label>
+          <select id="workspace-create-path"></select>
+        </div>
       </div>
       <div class="modal-actions workspace-create-actions">
         <button class="ghost sm" id="workspace-create-cancel">Cancel</button>
