Add explicit confirm modal for workspace deletes

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -889,6 +889,22 @@
       </div>
     </div>
   </div>
+  <!-- Workspace Confirm Modal -->
+  <div class="modal-overlay" hidden="" id="workspace-confirm-modal">
+    <div aria-describedby="workspace-confirm-body" aria-labelledby="workspace-confirm-title" aria-modal="true"
+      class="modal-dialog workspace-confirm-dialog" role="dialog" tabindex="-1">
+      <div class="modal-header">
+        <span class="label" id="workspace-confirm-title">Confirm</span>
+      </div>
+      <div class="modal-body" id="workspace-confirm-body">
+        <p id="workspace-confirm-text"></p>
+      </div>
+      <div class="modal-actions workspace-confirm-actions">
+        <button class="ghost sm" id="workspace-confirm-cancel">Cancel</button>
+        <button class="primary sm" id="workspace-confirm-yes">Confirm</button>
+      </div>
+    </div>
+  </div>
   <script data-car-loader="" src="static/loader.js?v=__CAR_ASSET_VERSION__"></script>
 </body>
 
