Refactor download button in workspace: replace old button with a new design and update functionality to reflect current folder context

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -288,7 +288,6 @@
             <button class="ghost sm" id="workspace-upload" title="Upload to current folder">Upload</button>
             <button class="ghost sm" id="workspace-new-folder" title="Create folder">New Folder</button>
             <button class="ghost sm" id="workspace-new-file" title="Create markdown file">New File</button>
-            <button class="ghost sm" id="workspace-download-all" title="Download all as zip">Download All</button>
             <button class="ghost sm hidden" id="workspace-generate-tickets" title="Generate tickets from spec">Generate tickets</button>
             <button class="ghost sm" id="workspace-reload">Reload</button>
             <button class="primary sm" id="workspace-save">Save</button>
@@ -296,6 +295,7 @@
         </div>
         <div class="workspace-path-row">
           <nav class="workspace-breadcrumbs" id="workspace-breadcrumbs"></nav>
+          <button class="ghost sm workspace-download-all-btn" id="workspace-download-all" title="Download all as ZIP">⬇</button>
         </div>
         <div class="workspace-grid">
           <aside class="workspace-file-browser">
