Add ticket editor prev/next navigation

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -515,6 +515,10 @@
                 <input class="ticket-fm-input" id="ticket-fm-title" placeholder="Title (optional)" spellcheck="false"
                   type="text">
                 <div class="ticket-header-actions">
+                  <button class="ghost sm icon-btn ticket-nav-btn" id="ticket-nav-prev" title="Previous ticket"
+                    aria-label="Previous ticket">←</button>
+                  <button class="ghost sm icon-btn ticket-nav-btn" id="ticket-nav-next" title="Next ticket"
+                    aria-label="Next ticket">→</button>
                   <label class="ticket-fm-toggle" title="Mark as done">
                     <input id="ticket-fm-done" type="checkbox">
                     <span class="ticket-fm-toggle-label">Done</span>
