feat: enhance mobile messaging interface with back navigation
- Added a back button in the messages detail view for improved navigation on mobile devices.
- Implemented responsive layout adjustments to show/hide elements based on viewport size.
- Updated styles for better usability and visual consistency in mobile view.
- Introduced functions to manage thread detail visibility based on user interactions.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -251,6 +251,9 @@
                 <div class="messages-thread-list" id="messages-thread-list"></div>
               </div>
               <div class="messages-main">
+                <div class="messages-detail-header mobile-only">
+                  <button class="messages-back-btn" id="messages-back-btn">← Back</button>
+                </div>
                 <div class="messages-thread-detail" id="messages-thread-detail">
                   <div class="messages-empty-state">
                     <div class="messages-empty-icon">💬</div>
