Add mobile workspace actions for mobile

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -358,6 +358,16 @@
               </button>
               <div class="workspace-mobile-actions">
                 <span class="muted small" id="workspace-status-mobile"></span>
+                <div class="workspace-mobile-menu">
+                  <button class="ghost sm icon-btn" id="workspace-mobile-menu-toggle" title="Workspace actions">⋯</button>
+                  <div class="workspace-mobile-dropdown hidden" id="workspace-mobile-dropdown">
+                    <button class="workspace-mobile-item" id="workspace-mobile-upload">Upload files</button>
+                    <button class="workspace-mobile-item" id="workspace-mobile-new-folder">New folder</button>
+                    <button class="workspace-mobile-item" id="workspace-mobile-new-file">New file</button>
+                    <button class="workspace-mobile-item" id="workspace-mobile-download">Download ZIP</button>
+                    <button class="workspace-mobile-item hidden" id="workspace-mobile-generate">Generate tickets</button>
+                  </div>
+                </div>
                 <button class="ghost sm" id="workspace-reload-mobile" title="Reload">↻</button>
                 <button class="primary sm" id="workspace-save-mobile">Save</button>
               </div>
