Add PMA dispatches storage, API, and UI

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -197,6 +197,17 @@
         </div>
       </div>
     </section>
+    <section class="pma-dispatches-section" id="pma-dispatches-section">
+      <div class="pma-dispatches-header">
+        <h2>PMA Dispatches</h2>
+        <span class="pill pill-small pill-warn" id="pma-dispatches-count">0</span>
+        <button class="ghost sm" id="pma-dispatches-refresh" title="Refresh dispatches">Refresh</button>
+      </div>
+      <div class="pma-dispatches-content">
+        <div class="pma-dispatches-list" id="pma-dispatches-list"></div>
+        <div class="pma-dispatches-detail" id="pma-dispatches-detail"></div>
+      </div>
+    </section>
     <section class="pma-docs-section hidden" id="pma-docs-section">
       <div class="pma-docs-header">
         <h2>PMA Docs</h2>
