Persist and surface failure diagnostics

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -306,6 +306,10 @@
                 <p class="muted">Run ID</p>
                 <p class="metric" id="last-run-id">–</p>
               </div>
+              <div>
+                <p class="muted">Failure</p>
+                <p class="metric" id="failure-summary">–</p>
+              </div>
             </div>
           </div>
           <details class="card" id="run-history">
